
2020-07-09  Edward Hart <edward.dan.hart@gmail.com>

	* reserved.c (is_reserved_word): fixed division by zero when called
	  before reserved words list has been initialised (bug #659). Thanks
	  to Paul Smith for fix.

2020-07-08  Simon Sobisch <simonsobisch@gnu.org>

	* scanner.l (scan_x): fixed #658 by building a national literal for nx''

2020-07-07  Edward Hart <edward.dan.hart@gmail.com>

	* cobc.c, scanner.l: fixed memory issues.

2020-07-07  Simon Sobisch <simonsobisch@gnu.org>

	FR #53 TURN directive
	* cobc.c (turn_ec_io): fixed case-sensitivity in filename comparison

2020-07-06  Simon Sobisch <simonsobisch@gnu.org>

	FR #359 Realia / OSVS / MSCOBOL compatibility
	* parser.y, cobc.h, reserved.c, tree.c, tree.h: added partial
	  support for EXHIBIT (full parsing, without CHANGED + UPON)

2020-07-03  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y (file_status_clause): only ignore VSAM status, pending proper
	  config option.
	* typeck.c: implement syntax rules for FILE STATUS (bug #656), with
	  warning for PIC 99 status (FR #333).
	* parser.y (file_control_entry): fixed bug #619: create dummy
	 current_file for invalid SELECT.
	* cobc.c (compare_prepare): fixed bug #569: stop copying into cmp_line
	  when line length exceeds CB_LINE_LENGTH.

2020-06-30  Edward Hart <edward.dan.hart@gmail.com>

	* typeck.c: strengthened syntax checks on UNSTRING ... COUNT (bug #653).

2020-06-29  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_internal_function): fix bug #641 FUNCTION RETURNING
	  with variable field size
	* parser.y (_procedure_returning): work around for bug #650
	  disabled PROCEDURE DIVISION USING for normal programs as pending
	* codegen.c (output_call): use a temporary integer for CALL ... RETURNING
	  to not pollute RETURN-CODE in this case, fixing bug #651

2020-06-28  Simon Sobisch <simonsobisch@gnu.org>

	* Makefile.am: include PROGRAMS_LIBS

2020-06-26  Edward Hart <edward.dan.hart@gmail.com>

	FR #53 TURN directive