@@ -7043,3 +7043,52 @@ prog.cob:76: error: syntax error, unexpected end of file
 ])
 #" <-- fix syntax highlighting
 AT_CLEANUP
+
+
+AT_SETUP([EQUALS in expressions])
+AT_KEYWORDS([misc])
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION DIVISION.
+       PROGRAM-ID. prog.
+       DATA DIVISION.
+       WORKING-STORAGE SECTION.
+       01  num PIC 99 VALUE 0.
+       PROCEDURE DIVISION.
+           IF num LESS OR EQUALS 0
+               CONTINUE
+           END-IF
+           IF num GREATER THAN OR EQUALS 1
+               CONTINUE
+           END-IF
+           IF num EQUALS TO 0
+               CONTINUE
+           END-IF
+           .
+])
+
+AT_CHECK([$COMPILE prog.cob], [0], [], [])
+AT_CLEANUP
+
+
+AT_SETUP([Invalid parentheses around condition])
+AT_KEYWORDS([misc])
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION DIVISION.
+       PROGRAM-ID. prog.
+
+       DATA DIVISION.
+       WORKING-STORAGE SECTION.
+       01  num PIC 99 VALUE 0.
+       PROCEDURE DIVISION.
+           IF num NOT (LESS OR EQUALS) 0 
+               CONTINUE
+           END-IF
+           .
+])
+
+AT_CHECK([$COMPILE prog.cob], [1], [],
+[prog.cob:9: error: invalid expression
+])
+AT_CLEANUP
